--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,7 @@ jobs:
         default: false
     macos:
       xcode: << parameters.xcode >>
+    resource_class: macos.x86.medium.gen2
     parallelism: << parameters.size >>
     steps:
       - when:
