--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,37 +1,13 @@
 version: 2.1
 
-commands:
-  inspect-bash-profile:
-    steps:
-      - run:
-          name: cat BASH profile
-          command: |
-            cat -e $HOME/.bash_profile
+orbs:
+  aws-cli: circleci/aws-cli@3.1
 
 jobs:
-  burger:
-    parameters:
-      xcode:
-        type: string
-        default: 13.2.0
+  build:
     macos:
-      xcode: << parameters.xcode >>
+      xcode: 14.2
+      resource_class: macos.m1.large.gen1
     steps:
-      - inspect-bash-profile
-      - run:
-          name: Add Newline
-          command: |
-            printf "\n" >> $HOME/.bash_profile
-      - inspect-bash-profile
-
-workflows:
-  main:
-    jobs:
-      - burger:
-          matrix:
-            parameters:
-              # See https://circleci.com/docs/2.0/testing-ios/#supported-xcode-versions
-              xcode:
-                - 13.2.1
-                - 12.5.1
-                - 11.7.0
+      - aws-cli/install
+    
