--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,5 +9,6 @@ jobs:
       xcode: 14.2
       resource_class: macos.m1.large.gen1
     steps:
+      - run: sudo softwareupdate --install-rosetta
       - aws-cli/install
     
