--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 
 orbs:
   aws-cli: circleci/aws-cli@3.1
+  macos: circleci/macos@2.3
 
 jobs:
   build:
@@ -9,6 +10,6 @@ jobs:
       xcode: 14.2
       resource_class: macos.m1.large.gen1
     steps:
-      - run: sudo softwareupdate --install-rosetta
+      - macos/install-rosetta
       - aws-cli/install
     
