--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,9 @@ commands:
           command: which node && node -v
       - run:
           name: check Python
-          command: which python && python --version
+          command: |
+            which python && python --version
+            which python3 && python3 --version
 
 jobs:
   burger:
