--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,6 @@ workflows:
             parameters:
               resource:
                 - macos.x86.medium.gen2
-                - large
+                - medium
               xcode:
                 - 12.5.1
