--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,7 @@ jobs:
         enum:
           - macos.x86.medium.gen2
           - macos.m1.large.gen1
+          - medium
           - large
         default: macos.x86.medium.gen2
     macos:
