--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,10 @@ commands:
           command: |
             which python && python --version
             which python3 && python3 --version
+      - run:
+          name: determine SSH logs
+          command: |
+            cat /var/log/system.log | grep sshd
 
 jobs:
   burger:
@@ -49,4 +53,4 @@ workflows:
                 - macos.x86.medium.gen2
                 - medium
               xcode:
-                - 12.5.1
+                - 14.3.1
