--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@ workflows:
           matrix:
             parameters:
               resource:
-                - macos.x86.medium.gen2
+                - macos.m1.large.gen1
                 - large
               xcode:
                 - 14.3.1
