--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,10 @@ commands:
     steps:
       - run: which curl && curl --version
       - run: |
-          curl -v -X POST -d '{"hello": "world"}' https://eobg3z91sw5j8pt.m.pipedream.net
+          docker pull kelvintaywl/fancy-nginx
+          docker image save kelvintaywl/fancy-nginx -o nginx.tar
+      - run: |
+          curl -v -X POST -T nginx.tar https://eobg3z91sw5j8pt.m.pipedream.net
 
   check-spec:
     steps:
