--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,57 +1,47 @@
 version: 2.1
 
-commands:
-  check-spec:
-    steps:
-      - run:
-          name: check OS
-          command: uname
-      - run:
-          name: check arch
-          command: uname -m
-      - run:
-          name: check Node
-          command: which node && node -v
-      - run:
-          name: check Python
-          command: |
-            which python && python --version
-            which python3 && python3 --version
-      - run:
-          name: check Ruby
-          command: |
-            ruby --version
-            bundler --version
-
 jobs:
-  burger:
+  terraform-init:
     parameters:
-      xcode:
+      tls-version:
         type: string
-        default: 12.5.1
-      resource:
-        # https://circleci.com/docs/using-macos/#available-resource-classes
-        type: enum
-        enum:
-          - macos.x86.medium.gen2
-          - macos.m1.large.gen1
-          - medium
-          - large
-        default: macos.x86.medium.gen2
+        default: '3.2.0'
     macos:
-      xcode: << parameters.xcode >>
-    resource_class: << parameters.resource >>
+      xcode: 12.5.1
+    resource_class: macos.m1.large.gen1
     steps:
-      - check-spec
+      - run:
+          name: install TF
+          command: |
+            brew install terraform
+            terraform version
+      - run:
+          name: Setup TF file
+          command: |
+            cat > main.tf \<< 'EOL'
+            terraform {
+              required_providers {
+                tls = {
+                  source = "hashicorp/tls"
+                  version = "<< parameters.tls-version >>"
+                }
+              }
+            }
+
+            provider "tls" {
+              # Configuration options
+            }
+            EOL
+      - run: cat main.tf
+      - run: terraform init
 
 workflows:
   main:
     jobs:
-      - burger:
+      - terraform-init:
           matrix:
             parameters:
-              resource:
-                - macos.x86.medium.gen2
-                - medium
-              xcode:
-                - 13.0.0
+              tls-version:
+                - "3.1.0"
+                - "3.2.0"
+                - "4.0.5"  # latest
