--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,9 @@ commands:
           name: check Node
           command: which node && node -v
       - run:
+          name: check SafariDriver
+          command: safaridriver --version
+      - run:
           name: check Python
           command: |
             which python && python --version
@@ -53,5 +56,6 @@ workflows:
               resource:
                 - macos.x86.medium.gen2
                 - medium
+                - macos.m1.medium.gen1
               xcode:
-                - 13.0.0
+                - 14.3.1
