--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,7 @@ jobs:
         type: enum
         enum:
           - macos.x86.medium.gen2
+          - macos.m1.medium.gen1
           - macos.m1.large.gen1
           - medium
           - large
