--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,101 +1,9 @@
 version: 2.1
 
-commands:
-  add-password-to-keychain:
-    steps:
-      - run: whoami
-      - run:
-          name: list keychains
-          command: |
-            security list-keychains
-      - run:
-          name: see default keychain
-          command: |
-            security default-keychain
-      - run:
-          name: set password in default keychain
-          command: |
-            security add-generic-password -a $(whoami) -s 'Eden Account Password' -w "fooBar1234"
-      - run:
-          name: verify password
-          command: |
-            security find-generic-password -a $(whoami) -s "Eden Account Password"  
-  switch-ruby-version:
-    steps:
-      - run:
-          name: show pre-installed Ruby details
-          command: |
-            ruby --version
-            which ruby
-      - run:
-          name: list available Ruby versions on rbenv
-          command: rbenv versions
-      - run:
-          name: switch Ruby version
-          command: rbenv global 3.2.2
-      - run:
-          name: show updated Ruby details
-          command: |
-            ruby --version
-            which ruby
-  check-spec:
-    steps:
-      - run:
-          name: check OS
-          command: uname
-      - run:
-          name: check arch
-          command: uname -m
-      - run:
-          name: check Node
-          command: which node && node -v
-      - run:
-          name: check SafariDriver
-          command: safaridriver --version
-      - run:
-          name: check Python
-          command: |
-            which python && python --version
-            which python3 && python3 --version
-      - run:
-          name: check Ruby
-          command: |
-            ruby --version
-            bundler --version
-
 jobs:
-  burger:
-    parameters:
-      xcode:
-        type: string
-        default: 12.5.1
-      resource:
-        # https://circleci.com/docs/using-macos/#available-resource-classes
-        type: enum
-        enum:
-          - macos.x86.medium.gen2
-          - macos.m1.medium.gen1
-          - macos.m1.large.gen1
-          - medium
-          - large
-        default: macos.x86.medium.gen2
+  build:
     macos:
-      xcode: << parameters.xcode >>
-    resource_class: << parameters.resource >>
+      xcode: 15.3.0
+    resource_class: macos.x86.medium.gen2
     steps:
-      # - check-spec
-      # - switch-ruby-version
-      - add-password-to-keychain
-
-workflows:
-  main:
-    jobs:
-      - burger:
-          matrix:
-            parameters:
-              resource:
-                # - macos.x86.medium.gen2
-                # - medium
-                - macos.m1.medium.gen1
-              xcode:
-                - 15.3.0
+      - run: sleep 10
