--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,4 +6,17 @@ jobs:
       xcode: 15.3.0
     resource_class: macos.x86.medium.gen2
     steps:
-      - run: sleep 10
+      - checkout
+      - run:
+          environment:
+            GEM_PATH: tmp/bundle
+          name: install deps
+          command: |
+            bundle config set --local path $GEM_PATH
+            bundle check || bundle install
+      - run:
+          name: check deps
+          command: |
+            bundle list
+            bundle info nokogiri
+            
