try /tmp folder for gems

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       - checkout
       - run:
           environment:
-            GEM_PATH: tmp/bundle
+            GEM_PATH: /tmp/bundle
           name: install deps
           command: |
             #!/bin/bash
