--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ jobs:
       xcode: 15.0
     resource_class: macos.m1.medium.gen1
     steps:
+      - macos/install-rosetta
       - aws-cli/install
       - run:
           name: generate large files
