try: reduce file sizes :p

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,9 +19,8 @@ jobs:
           name: generate large files
           command: |
             mkdir m1
-            mkfile -n 1g m1/tmp_1GB_dummy
-            mkfile -n 5g m1/tmp_5GB_dummy
-            mkfile -n 10g m1/tmp_10GB_dummy
+            mkfile -n 100m m1/tmp_100MB_dummy
+            mkfile -n 200m m1/tmp_200MB_dummy
             ls -lah m1
       # Fix attempt: https://support.circleci.com/hc/en-us/articles/19334402064027-Troubleshooting-slow-uploads-to-S3-for-jobs-using-an-m1-macOS-resource-class
       - run: sudo sysctl net.inet.tcp.tso=0
