--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     macos:
       xcode: 15.0
-    resource_class: macos.m1.medium.gen1
+    resource_class: macos.x86.medium.gen2
     environment:
       AWS_PAGER: ""
     steps:
